# API

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  __init__.py  auth.py  deploy.sh  docker-compose.yml  docs.py  gateway.py  main.py  main.py.new  mcp_adapter.py  mem0.py  models.py  pyproject.toml  pytest.ini  requirements.txt  security.py
.github/workflows/: ci-cd.yml
admin-dashboard/: README.md  package.json
admin-dashboard/public/: index.html  manifest.json
admin-dashboard/src/: App.js  index.js
api/control_center/: __init__.py
config/: logging.conf  settings.py
context_providers/: mem0_provider.py
control_center/: dashboard.py  main.py  monitoring.py  system_settings.py
core/: enhanced_event_bus.py  logging.py  unified_storage.py
core/endpoint_tracking/: __init__.py  (+2 more)
database/: connection.py
docs/: admin-dashboard.md  mcp_adapter.md  mcp_implementation_report.md
frontend_engine/: health.py  main.py
models/: __init__.py  api_keys.py  auth.py  plugins.py
routes/: __init__.py  auth.py  character_profiles.py  data.py  endpoint_status.py  engine.py  fmt_templates.py  health.py  integrations.py  interface_adapter.py  metrics.py  plugin_system.py  plugins.py  storage.py
scripts/: create_admin_user.py  initialize_db.sh  model_manager.py  test_mcp_adapter.py  test_mcp_direct.py  test_mcp_endpoints.sh
services/: __init__.py  api_key_service.py  user_service.py
system_engine/: health.py  main.py
tests/: conftest.py  test_app.py  test_auth.py  test_health.py  test_mcp_adapter.py  test_metrics.py  test_models.py  test_plugins.py
(+64 files in other folders)
